<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bliss_000.simplesocialmedia.MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/log_into_socialmedia"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleText"
        android:layout_alignStart="@+id/titleText"
        android:layout_centerVertical="true"
        android:text="@string/login"
        android:visibility="visible" />

    <Button
        android:id="@+id/capturePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/titleText"
        android:layout_alignRight="@+id/titleText"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="18dp"
        android:text="@string/take_profile_picture"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/profilePreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/capturePicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_picture_preview"
        android:scaleType="center"
        android:visibility="invisible"
        app:srcCompat="@color/colorAccent" />

    <Button
        android:id="@+id/registerConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:visibility="invisible"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/chooseRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginConfirmButton"
        android:layout_alignBottom="@+id/loginConfirmButton"
        android:layout_alignEnd="@+id/titleText"
        android:layout_alignRight="@+id/titleText"
        android:text="@string/choose_register"
        android:visibility="visible" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:visibility="gone" />

</RelativeLayout>